--- a/template/projectForm.html
+++ b/template/projectForm.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-md-12">
                 <label for="projectTitle" class="form-label" >Project Title </label>
-                <input name="text" type="projectTitle" class="form-control" id="projectTitle" required>
+                <input name="projectTitle" type="text" class="form-control" id="projectTitle" required>
             </div>
             <div class="col-md-6">
                 <label for="lang" class="form-label" >Programming Language</label>
